# M3CVRP_dist_and_fairness

./: README.md
Large-scale-WCP-Dataset/: Depots.json  README.md  WasteCollectionSites.json
RFMA-RFLS-Code/: README.md
RFMA-RFLS-Code/Code/: CMakeLists.txt  InitialSolution.cpp  InitialSolution.h  LocalSearch.cpp  LocalSearch.h  MemeticAlgorithm.cpp  MemeticAlgorithm.h  MemeticAlgorithm2.cpp  main.cpp
RFMA-RFLS-Code/Code/data/: ConstructCar.py  DisposalFacilities.json  VehicleData_100.json
RFMA-RFLS-Code/Code/include/cpython/: pystate.h
RFMA-RFLS-Code/Code/object/: DataLoader.cpp  DataLoader.h  Point.cpp  Point.h  Vehicle.cpp  Vehicle.h
